--- a/DiscoverYourself/Views/DevelopmentGoals/Index.cshtml
+++ b/DiscoverYourself/Views/DevelopmentGoals/Index.cshtml
@@ -58,7 +58,7 @@
 
         <div class="form-group">
             <label asp-for="Progress"></label>
-            <input asp-for="Progress" type="number" class="form-control"/>
+            <input asp-for="Progress" type="number" class="form-control" min="0"/>
             <span asp-validation-for="Progress" class="text-danger"></span>
         </div>
 
