--- a/DiscoverYourself/Views/Home/Index.cshtml
+++ b/DiscoverYourself/Views/Home/Index.cshtml
@@ -31,4 +31,7 @@
         <a href="/EducationGoals/Index/@userId" class="target-btn">@localizer["EducationGoalsMsg"]</a>
         <a href="/DevelopmentGoals/Index/@userId" class="target-btn">@localizer["DevelopmentGoalsMsg"]</a>
     </div>
+    <div>
+        <a href="/Home/Reports/@userId" class="target-btn">@localizer["ReportsMsg"]</a>
+    </div>
 </div>
