--- a/DiscoverYourself/Views/Home/Index.cshtml
+++ b/DiscoverYourself/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 <div class="text-center">
     <div class="header">
         <h1 class="display-4">@localizer["WelcomeMsg"] @userName</h1>
-        <p>Discover yourself by setting your goals and share them with the world!</p>
+        <p>@localizer["DiscoverYourselfMsg"]</p>
         <div class="user-profile">
             <img src="https://i.hizliresim.com/bgtjosy.jpeg" alt="User Profile" class="profile-pic">
         </div>
