--- a/DiscoverYourself/Views/Home/Reports.cshtml
+++ b/DiscoverYourself/Views/Home/Reports.cshtml
@@ -19,10 +19,10 @@
 </div>
 
 <div class="report-buttons">
-    <button onclick="getReport('Accumulation')">Get My Accumulation Report</button>
-    <button onclick="getReport('Education')">Get My Education Report</button>
-    <button onclick="getReport('Development')">Get My Development Report</button>
-    <button onclick="getReport('Business')">Get My Business Report</button>
+    <button onclick="getReport('Accumulation')">Accumulation Report</button>
+    <button onclick="getReport('Education')">Education Report</button>
+    <button onclick="getReport('Development')">Development Report</button>
+    <button onclick="getReport('Business')">Business Report</button>
 </div>
 
 <script>
