--- a/DiscoverYourself/Views/Home/Reports.cshtml
+++ b/DiscoverYourself/Views/Home/Reports.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
+
+@{
     ViewData["Title"] = "Reports Page";
     Layout = null;
 }
@@ -19,10 +22,10 @@
 </div>
 
 <div class="report-buttons">
-    <button onclick="getReport('Accumulation')">Accumulation Report</button>
-    <button onclick="getReport('Education')">Education Report</button>
-    <button onclick="getReport('Development')">Development Report</button>
-    <button onclick="getReport('Business')">Business Report</button>
+    <button onclick="getReport('Accumulation')">@localizer["AccumulationReportMsg"]</button>
+    <button onclick="getReport('Education')">@localizer["EducationReportMsg"]</button>
+    <button onclick="getReport('Development')">@localizer["DevelopmentReportMsg"]</button>
+    <button onclick="getReport('Business')">@localizer["BusinessReportMsg"]</button>
 </div>
 
 <script>
