--- a/DiscoverYourself/Views/BusinessGoals/Index.cshtml
+++ b/DiscoverYourself/Views/BusinessGoals/Index.cshtml
@@ -11,12 +11,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>@localizer["BusinessGoals"]</title>
+    <title>@localizer["BusinessGoalsMsg"]</title>
     <link rel="stylesheet" href="~/css/business_goals.css" asp-append-version="true">
 </head>
 <body>
 <div class="container">
-    <h1>@localizer["BusinessGoals"]</h1>
+    <h1>@localizer["BusinessGoalsMsg"]</h1>
 
     <form action="/BusinessGoals/Save" method="post">
         @Html.AntiForgeryToken()
