--- a/DiscoverYourself/Views/DevelopmentGoals/Index.cshtml
+++ b/DiscoverYourself/Views/DevelopmentGoals/Index.cshtml
@@ -1,6 +1,8 @@
 @using DiscoverYourself.Models.Enums
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model DiscoverYourself.Models.RequestModels.DevelopmentGoalRequestModel
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 
 @{
     Layout = null;
