--- a/DiscoverYourself/Views/DevelopmentGoals/Index.cshtml
+++ b/DiscoverYourself/Views/DevelopmentGoals/Index.cshtml
@@ -11,12 +11,12 @@
 
 
 <head>
-    <title>Development Goals</title>
+    <title>@localizer["DevelopmentGoalsMsg"]</title>
     <link rel="stylesheet" href="~/css/development_goals.css" asp-append-version="true">
 </head>
 
 <div class="form-container">
-    <h2>Development Goal</h2>
+    <h2>@localizer["DevelopmentGoalsMsg"]</h2>
     <form asp-action="Create" method="post">
         
         @Html.AntiForgeryToken()
