--- a/DiscoverYourself/wwwroot/css/login.css
+++ b/DiscoverYourself/wwwroot/css/login.css
@@ -65,7 +65,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
-    gap: 15px; /* Spacing between buttons */
+    gap: 15px; 
 }
 
 .register-language-container a {
@@ -75,8 +75,8 @@ body {
 .language-selector {
     display: flex;
     justify-content: center;
-    gap: 10px; /* Space between language buttons */
-    flex-wrap: wrap; /* Ensure buttons wrap on small screens */
+    gap: 10px; 
+    flex-wrap: wrap; 
 }
 
 .language-selector .language-btn {
@@ -126,8 +126,8 @@ body {
 }
 
 .language-selector .flag-icon {
-    width: 24px; /* İkonun genişliği */
+    width: 24px; 
     height: auto;
-    margin-right: 8px; /* Metinden önceki boşluk */
-    vertical-align: middle; /* Metinle hizalamak için */
+    margin-right: 8px; 
+    vertical-align: middle; 
 }
