--- a/DiscoverYourself/Views/Home/Reports.cshtml
+++ b/DiscoverYourself/Views/Home/Reports.cshtml
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="header text-center">
-    <h1>Welcome to Your Reports</h1>
+    <h1>@localizer["WelcomeToYourReportsMsg"]</h1>
     <p>Choose a report to view detailed insights</p>
 </div>
 
