--- a/DiscoverYourself/Views/Home/Reports.cshtml
+++ b/DiscoverYourself/Views/Home/Reports.cshtml
@@ -18,7 +18,7 @@
 <body>
 <div class="header text-center">
     <h1>@localizer["WelcomeToYourReportsMsg"]</h1>
-    <p>Choose a report to view detailed insights</p>
+    <p>@localizer["ChooseReportsMsg"]</p>
 </div>
 
 <div class="report-buttons">
