--- a/DiscoverYourself/Views/Home/Reports.cshtml
+++ b/DiscoverYourself/Views/Home/Reports.cshtml
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/reports.css" asp-append-version="true">
-    <title>Reports Page</title>
+    <title>@localizer["ReportsPageMsg"]</title>
 </head>
 <body>
 <div class="header text-center">
