--- a/DiscoverYourself/Views/Account/Register.cshtml
+++ b/DiscoverYourself/Views/Account/Register.cshtml
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>@localizer["RegisterMsg"]</title>
     <link rel="stylesheet" href="~/css/register.css" asp-append-version="true">
 </head>
 <body>
