--- a/DiscoverYourself/Views/AccumulationGoals/Index.cshtml
+++ b/DiscoverYourself/Views/AccumulationGoals/Index.cshtml
@@ -30,15 +30,15 @@
             <div class="section-title">@localizer["GoalsMsg"]</div><br/><hr/>
             <div class="form-group">
                 <label for="targetCurrencyInput">@localizer["TargetCurrencyMsg"] (₺):</label>
-                <input type="number" id="targetCurrencyInput" name="TargetCurrency" placeholder="Hedef döviz miktarını giriniz" required>
+                <input type="number" id="targetCurrencyInput" name="TargetCurrency" placeholder="@localizer["EnterQuantityMsg"]" required>
             </div>
             <div class="form-group">
                 <label for="targetGoldInput">@localizer["TargetGoldMsg"] (₺):</label>
-                <input type="number" id="targetGoldInput" name="TargetGold" placeholder="Hedef altın miktarını giriniz" required>
+                <input type="number" id="targetGoldInput" name="TargetGold" placeholder="@localizer["EnterQuantityMsg"]" required>
             </div>
             <div class="form-group">
                 <label for="targetSilverInput">@localizer["TargetSilverMsg"] (₺):</label>
-                <input type="number" id="targetSilverInput" name="TargetSilver" placeholder="Hedef gümüş miktarını giriniz" required>
+                <input type="number" id="targetSilverInput" name="TargetSilver" placeholder="@localizer["EnterQuantityMsg"]" required>
             </div>
         </div>
 
@@ -46,15 +46,15 @@
             <div class="section-title">@localizer["RealizedMsg"]</div><br/><hr/>
             <div class="form-group">
                 <label for="actualCurrencyInput">@localizer["RealizedCurrencyMsg"] (₺):</label>
-                <input type="number" id="actualCurrencyInput" name="ActualCurrency" placeholder="Yapılan döviz miktarını giriniz" required>
+                <input type="number" id="actualCurrencyInput" name="ActualCurrency" placeholder="@localizer["EnterQuantityMsg"]" required>
             </div>
             <div class="form-group">
                 <label for="actualGoldInput">@localizer["RealizedGoldMsg"] (₺):</label>
-                <input type="number" id="actualGoldInput" name="ActualGold" placeholder="Yapılan altın miktarını giriniz" required>
+                <input type="number" id="actualGoldInput" name="ActualGold" placeholder="@localizer["EnterQuantityMsg"]" required>
             </div>
             <div class="form-group">
                 <label for="actualSilverInput">@localizer["RealizedSilverMsg"] (₺):</label>
-                <input type="number" id="actualSilverInput" name="ActualSilver" placeholder="Yapılan gümüş miktarını giriniz" required>
+                <input type="number" id="actualSilverInput" name="ActualSilver" placeholder="@localizer["EnterQuantityMsg"]" required>
             </div>
         </div>
 
