--- a/DiscoverYourself/Views/Reports/AccumulationReport.cshtml
+++ b/DiscoverYourself/Views/Reports/AccumulationReport.cshtml
@@ -1,25 +1,27 @@
 ﻿@model List<DiscoverYourself.Models.Entities.InvestmentGoal>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer localizer
 
 @{
     ViewData["Title"] = "Accumulation Report Page";
     Layout = null;
 }
 <head>
-    <title>Accumulation Report Page</title>
+    <title>@localizer["AccumulationReportMsg"] Page</title>
     <link rel="stylesheet" href="~/css/accumulation_report.css" asp-append-version="true">
 </head>
-<h2>Accumulation Report</h2>
+<h2>@localizer["AccumulationReportMsg"]</h2>
 
 <table class="table">
     <thead>
     <tr>
-        <th>Date</th>
-        <th>Target Currency</th>
-        <th>Actual Currency</th>
-        <th>Target Gold</th>
-        <th>Actual Gold</th>
-        <th>Target Silver</th>
-        <th>Actual Silver</th>
+        <th>@localizer["DateMsg"]</th>
+        <th>@localizer["TargetCurrencyMsg"]</th>
+        <th>@localizer["ActualCurrencyMsg"]</th>
+        <th>@localizer["TargetGoldMsg"]</th>
+        <th>@localizer["ActualGoldMsg"]</th>
+        <th>@localizer["TargetSilverMsg"]</th>
+        <th>@localizer["ActualSilverMsg"]</th>
     </tr>
     </thead>
     <tbody>
