--- a/DiscoverYourself/Views/Reports/BusinessReport.cshtml
+++ b/DiscoverYourself/Views/Reports/BusinessReport.cshtml
@@ -5,7 +5,7 @@
 @{ Layout = null; }
 
 <head>
-    <title>@localizer["AccumulationReportPageMsg"]</title>
+    <title>Business Report</title>
     <link rel="stylesheet" href="~/css/business_report.css" asp-append-version="true">
 </head>
 <h2>Business Report</h2>
