--- a/DiscoverYourself/Views/Reports/BusinessReport.cshtml
+++ b/DiscoverYourself/Views/Reports/BusinessReport.cshtml
@@ -5,10 +5,10 @@
 @{ Layout = null; }
 
 <head>
-    <title>Business Report</title>
+    <title>@localizer["BusinessReportMsg"]</title>
     <link rel="stylesheet" href="~/css/business_report.css" asp-append-version="true">
 </head>
-<h2>Business Report</h2>
+<h2>@localizer["BusinessReportMsg"]</h2>
 
 <table class="table">
     <thead>
