--- a/DiscoverYourself/Views/Reports/BusinessReport.cshtml
+++ b/DiscoverYourself/Views/Reports/BusinessReport.cshtml
@@ -13,13 +13,13 @@
 <table class="table">
     <thead>
     <tr>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Tasks Completed</th>
-        <th>Task Type</th>
-        <th>Daily Work Hours</th>
-        <th>Daily Self Development Hours</th>
-        <th>Additional Info</th>
+        <th>@localizer["StartDateMsg"]</th>
+        <th>@localizer["EndDateMsg"]</th>
+        <th>@localizer["TaskCompletedMsg"]</th>
+        <th>@localizer["TaskTypeMsg"]</th>
+        <th>@localizer["DailyWorkHoursMsg"]</th>
+        <th>@localizer["DailySelfDevelopmentHoursMsg"]</th>
+        <th>@localizer["AdditionalInfoMsg"]</th>
     </tr>
     </thead>
     <tbody>
