--- a/DiscoverYourself/Views/Reports/EducationReport.cshtml
+++ b/DiscoverYourself/Views/Reports/EducationReport.cshtml
@@ -5,16 +5,16 @@
 @{ Layout = null; }
 
 <head>
-    <title>Education Report</title>
+    <title>@localizer["EducationReportMsg"]</title>
     <link rel="stylesheet" href="~/css/education_report.css" asp-append-version="true">
 </head>
-<h2>Education Report</h2>
+<h2>@localizer["EducationReportMsg"]</h2>
 
 <table class="table">
     <thead>
     <tr>
-        <th>Start Date</th>
-        <th>End Date</th>
+        <th>@localizer["StartDateMsg"]</th>
+        <th>@localizer["EndDateMsg"]</th>
     </tr>
     </thead>
     <tbody>
