--- a/DiscoverYourself/Views/Reports/DevelopmentReport.cshtml
+++ b/DiscoverYourself/Views/Reports/DevelopmentReport.cshtml
@@ -19,6 +19,8 @@
         <th>@localizer["DescriptionMsg"]</th>
         <th>@localizer["TitleMsg"]</th>
         <th>@localizer["ProgressMsg"]</th>
+        <th>@localizer["PriorityLevelMsg"]</th>
+        <th>@localizer["ResourcesNeededMsg"]</th>
     </tr>
     </thead>
     <tbody>
@@ -31,6 +33,8 @@
             <td>@development.Description</td>
             <td>@development.Title</td>
             <td>@development.Progress</td>
+            <td>@development.PriorityLevel</td>
+            <td>@development.ResourcesNeeded</td>
         </tr>
     }
     </tbody>
