--- a/DiscoverYourself/Views/Reports/DevelopmentReport.cshtml
+++ b/DiscoverYourself/Views/Reports/DevelopmentReport.cshtml
@@ -21,6 +21,7 @@
         <th>@localizer["ProgressMsg"]</th>
         <th>@localizer["PriorityLevelMsg"]</th>
         <th>@localizer["ResourcesNeededMsg"]</th>
+        <th>@localizer["FeedbackMsg"]</th>
     </tr>
     </thead>
     <tbody>
@@ -35,6 +36,7 @@
             <td>@development.Progress</td>
             <td>@development.PriorityLevel</td>
             <td>@development.ResourcesNeeded</td>
+            <td>@development.Feedback</td>
         </tr>
     }
     </tbody>
