--- a/DiscoverYourself/Views/Reports/DevelopmentReport.cshtml
+++ b/DiscoverYourself/Views/Reports/DevelopmentReport.cshtml
@@ -22,6 +22,7 @@
         <th>@localizer["PriorityLevelMsg"]</th>
         <th>@localizer["ResourcesNeededMsg"]</th>
         <th>@localizer["FeedbackMsg"]</th>
+        <th>@localizer["CreatedDateMsg"]</th>
     </tr>
     </thead>
     <tbody>
@@ -37,6 +38,7 @@
             <td>@development.PriorityLevel</td>
             <td>@development.ResourcesNeeded</td>
             <td>@development.Feedback</td>
+            <td>@development.CreatedDate</td>
         </tr>
     }
     </tbody>
